--- a/com.hibzz.reflectiontoolkit.asmdef
+++ b/com.hibzz.reflectiontoolkit.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "Hibzz.ReflectionToolkit",
     "references": [],
     "includePlatforms": [
+        "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
